--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -83,9 +83,9 @@
 
 
 
-\clearpage
-\input{211008_MM_T3100_ROS - Topic - Analyse.tex}				% Section
-\input{211008_MM_T3100_ROS - Topic - Troubleshooting.tex}			% SubSection
+%\clearpage
+%\input{211008_MM_T3100_ROS - Topic - Analyse.tex}				% Section
+%\input{211008_MM_T3100_ROS - Topic - Troubleshooting.tex}			% SubSection
 
 
 
@@ -93,38 +93,30 @@
 
 \clearpage
 \input{211008_MM_T3100_Architektur.tex}						% Section
-\input{211008_MM_T3100_Architektur - Abstraction.tex}				% SubSection
-\input{211008_MM_T3100_Architektur - Domain.tex}					% SubSection
-\input{211008_MM_T3100_Architektur - Application.tex}				% SubSection
-\input{211008_MM_T3100_Architektur - Adapter.tex}					% SubSection
-\input{211008_MM_T3100_Architektur - Plugin.tex}					% SubSection
-\input{211008_MM_T3100_Architektur - Plugin calling.tex}					% SubSubSection
-\input{211008_MM_T3100_Architektur - Plugin threading.tex}				% SubSubSection
-\input{211008_MM_T3100_Architektur - Plugin coex.tex}					% SubSubSection
+
 
 
 
 \clearpage
 \input{211008_MM_T3100_Implementierung.tex}					% Section
 
+\input{211008_MM_T3100_Implementierung - Domain.tex}				% SubSection
+\input{211008_MM_T3100_Implementierung - DroneController.tex}		% SubSection
+\input{211008_MM_T3100_Implementierung - Adapter.tex}				% SubSection
+\input{211008_MM_T3100_Implementierung - Plugin.tex}				% SubSection
+\input{211008_MM_T3100_Implementierung - parrot.tex}					% SubSubSection
+\input{211008_MM_T3100_Implementierung - PosControl.tex}				% SubSubSection
+\input{211008_MM_T3100_Implementierung - calling.tex}					% SubSubSection
+\input{211008_MM_T3100_Implementierung - threading.tex}					% SubSubSection
+\input{211008_MM_T3100_Implementierung - coex.tex}					% SubSubSection
+
+
+
 
 
 
 \clearpage
-\input{211008_MM_T3100_ROS - Topic - Nutzung.tex}				% Section
-
-
-
-
-
-
-
-
-
-
-
-
-
+\input{211008_MM_T3100_Erweiterungen.tex}					% Section
 
 
 
