--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -66,7 +66,9 @@
 
 
 %Hardware
-
+\NewBibItem{Quad1}{How quadcopters work \& fly: An intro to multirotors}
+\Online{https://www.droneybee.com/how-quadcopters-work/}
+\Published{\NA}, \Modified{20.11.2017}, \Requested{01.04.2022}
 
 
 
