--- a/Ausarbeitung/211008_MM_T3100_Methodik - Software.tex
+++ b/Ausarbeitung/211008_MM_T3100_Methodik - Software.tex
@@ -21,11 +21,14 @@ Für eine korrekte Kompilierung müssen \textit{CMakeList.txt}-Dateien den Befeh
 Als Betiebtssystem wird das \textit{UNIX}-basierte Betriebssystem \textit{Ubuntu} auf einer \VM\ in der Version 14.04 eingesetzt.
 Die Auswahl dieser Version gründet auf den Anforderungen der \ROS \textit{Indigo}-Version.\comp{rosVersion}
 
-Die \VM\ wird durch die Software \textit{VMWare Workstation 15 Pro} visualisiert.
+Die \VM\ wird durch die Software \textit{VMWare Workstation 15 Pro} virtualisiert.
 
 
 \newSec{Visual Studio - IDE}{3}
-\missing\
+Aus der Präferenz des Autors heraus wurde der Code mittels \textit{Visual Studio 2019 (Community Editon)} erstellt, getestet und anschließend in den \textit{catkin workspace} migriert.
+
+
+
 
 
 
