--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Accel.tex
@@ -1,4 +1,4 @@
-\newSec[ControlPosAccel]{Positionsregelung von \Quad[n] aus Beschleunigungsdaten}{2}
+\newSec[ControlPosAccel]{Erzeugung von Posen aus Beschleunigungsdaten}{2}
 
 
 
