--- a/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem.tex
@@ -40,8 +40,8 @@ Evtl Norm „IEC 60050-351 Internationales Elektrotechnisches Wörterbuch – Te
 
 
 
+\newSec{Stabilität}{2}
 
 
-
-
+\missing[nur anmerken, dass es Instabile Systeme gibt => Bode-Diagramm nennen]
 
