--- a/Ausarbeitung/211008_MM_T3100_Functions - ros.tex
+++ b/Ausarbeitung/211008_MM_T3100_Functions - ros.tex
@@ -7,7 +7,11 @@
 \newcommand{\rTopic}[1]{\Topic\ \texttt{\textcolor{magenta}{#1}}}
 
 
+\newcommand{\Msg}[1][]{\textit{Message#1}}
 
+
+
+\newcommand{\Pack}[1][]{\textit{Package#1}}
 
 
 
