--- a/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - COEX.tex
@@ -65,6 +65,24 @@ s-Bus ??
 
 
 
+\begin{figure}[ht!]
+\vspace{0.25cm}
+\begin{center}
+\fbox{\includegraphics[width=7.5cm]{Pictures/Aufbau1.jpg}}\hfill
+\fbox{\includegraphics[width=7.5cm]{Pictures/Aufbau2.jpg}}
+\fbox{\includegraphics[width=7.5cm]{Pictures/Aufbau3.jpg}}\hfill
+\fbox{\includegraphics[width=7.5cm]{Pictures/Aufbau4.jpg}}
+\caption{Aufbau des Bausatzes für die Drohne \Clover}
+\label{fig:coexBuild}
+\end{center}
+
+\vspace{0.25cm}
+\refImgShort{fig:coexBuild} zeigt etappenweise den Aufbau des Bausatzes für die Drohne \Clover. Hierbei ist die zeitliche Anordnung in der Collage zeilenweise zu interpretieren.
+\end{figure}
+
+
+
+
 
 
 
@@ -99,7 +117,7 @@ s-Bus ??
 
 
 \newSec[COEXPkg]{COEX-Package}{4}
-Für die Interaktion mit der \COEX-Drohne wurden diverse Klassen erstellt, um einzelne Aspekte der Interaktion mit der Drohne umsetzen zu können.
+Für die Interaktion mit der \COEX-Drohne wurden diverse Klassen erstellt, um einzelne Aspekte der Interaktion mit der Drohne umsetzen zu können (siehe refCap{ImplPlugCOEX}).
 
 Nach dem Wechsel auf die andere Drohne wurde die Aktualisierung dieses Package nicht weiter verfolgt. Sofern eine Einbindung der \COEX-Drohne in die Ergebnisse dieser \Arbeit\ durchgeführt werden soll, müss dieses Package entsprechend angepasst werden.
 
@@ -112,6 +130,12 @@ Somit wäre der Versuch für nachfolgende Studierende sehr viel sicherer und so.
 
 
 \missing\
+
+
+Das \rTopic{/mavros/rc/override} erlaubt das Überschreiben der RC-Kanäle, somit können einzele Eingaben durch den Controller übernommen werden.
+\missing\
+
+
 
 
 
