--- a/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
+++ b/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
@@ -29,15 +29,33 @@
 \newSec{Geometrien}{2}
 Bei \Quad[n] handelt es sich im allgemeinen um Fluggeräte mit vier Rotoren, welche horizontal angebracht sind. Der Auftrieb wird somit unmittelbar durch die Rotoren induziert.
 
-Die Rotoren von \Quad[n] können in zwei verschiedenen Anordnungen angebracht werden. in diesem Kapitel sollen diese Anordnung näher beschrieben werden.
+Die Rotoren von \Quad[n] können in zwei verschiedenen Anordnungen angebracht werden. In diesem Kapitel sollen diese Anordnung näher beschrieben werden.
+
+
+
+
+\begin{figure}[ht!]
+\vspace{0.25cm}
+\begin{center}
+\fbox{\includegraphics[width=12cm]{Pictures/Geometries.png}}
+\caption{Geometrien von \Quad[n] \cite{Paper1}}
+\label{fig:Geom}
+\end{center}
+
+\vspace{0.25cm}
+\refImgShort{fig:Geom} zeigt \missing.
+\end{figure}
+
+
+Das Drehmoment der Rotoren des \Quad[s] muss sich aufheben können, um eine unkontrollierbare Rotation um die z-Achse vermeiden zu können. Um die Agilität des \Quad[s] beibehalten zu können, sind die Drehrichtungen der Rotoren zu alternieren.\comp{Paper1}
 
 
 \newSec[Plus]{\textbf{+}-Anordnung}{3}
 
+In der \textbf{+}-Anordnung befinden sich die Rotoren auf den Lokalen Achsen des \Quad[s]. Die Nummerierung der Rotoren erfolgt gemäß \refImg{fig:Geom} (links) im Uhrzeigersinn beginnend mit dem Rotor auf der positiven x-Achse.
 
 
-
-\missing[für roll und pitch wird die Drehzahl die Rotoren auf der jeweiligen Achse entgegengesetzt manipuliert.]
+\missing[für roll und pitch wird die Drehzahl die Rotoren auf der jeweiligen Achse entgegengesetzt angepasst.]
 \missing[für eine Drehung um die z-Achse (yarn) werden die Rotoren der x- und y-Achse entgegengesetzt manipuliert.]
 
 
@@ -89,14 +107,12 @@ Die Rotoren von \Quad[n] können in zwei verschiedenen Anordnungen angebracht we
 \vspace{0.25cm}
 \begin{center}
 \fbox{\includegraphics[width=12cm]{Pictures/Forces_Rolled.png}}
-\caption{wirkende Kräfte für gerollten \Quad\ \comp{Paper2}}
+\caption{wirkende Kräfte für gerollten \Quad\ \comp{Quad1}}
 \label{fig:ForcesRolled}
 \end{center}
 
 \vspace{0.25cm}
 \refImgShort{fig:ForcesRolled} zeigt die auf einen \Quad\ wirkenden Kräfte, wenn sich dieser in einer gerollten Orientierung befindet. Hier entspricht der Betrag der Kraft entlang der z-Achse der Gewichtskraft.
-
-
 \end{figure}
 
 
@@ -120,6 +136,13 @@ Hieraus ergibt ich, dass eine Neigung zur horizontalen Ebene ine Beschleunigung 
 
 
 \newSec{Pose}{2}
+Eine Pose ist die Positions- und Lagebeschreibung in einem Raum. \missing[quelle]
+
+
+
+
+
+
 
 
 
