--- a/Ausarbeitung/211008_MM_T3100_ROS - Topic - Analyse.tex
+++ b/Ausarbeitung/211008_MM_T3100_ROS - Topic - Analyse.tex
@@ -157,9 +157,9 @@ Channel-Belegung wie \Topic{/mavros/rc/in}.
 \newSec[TopicImuData]{/mavros/imu/data}{4}
 Sendet Lage und Beschleunigungsdaten.\\
 Typ: sensor\_msgs::Imu \\
-orientation: Winkel um die Achsen $[°]$\\
+orientation: Winkel um die Achsen $[$°$]$\\
 angular\_velocity: Geschwindigkeit entlang der Achsen $[m/s]$\\
-linear\_acceleration: Beschleunigung entlang der Achsen $[m/s²]$
+linear\_acceleration: Beschleunigung entlang der Achsen $[m/s$²$]$
 
 
 \newSec[TopicRange]{/rangefinder/data}{4}
