edited Chapter Regelsystem

--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -27,6 +27,12 @@
 \Published{19.07.2013}
 
 
+% Normen
+\NewBibItem{IEC60050-351}{Internationales Elektrotechnisches Wörterbuch – Teil 351: Leittechnik (IEC 60050-351:2006)}
+\Published{06/2009}
+
+
+
 % Bücher
 
 
