--- a/Ausarbeitung/211008_MM_T3100_Implementierung - DroneController.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - DroneController.tex
@@ -1,4 +1,4 @@
-\newSec[ImplApp]{Implementierung des Domain Layers - \textit{DroneController} Package}{2}
+\newSec[ImplApp]{Application Layer - \textit{DroneController} Package}{2}
 
 
 
