--- a/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - coex.tex
@@ -4,7 +4,7 @@ Dieses Kapitel beschreibt die Klassen, welche zur Interkation mit der zuerst ein
 
 
 \note{Die Implementierung dieses Paketes wurde vor der konzeptionellen Änderung des \textit{Application-Layers} umgesetzt.
-Die Beschreibung der Klassen dieses Paketes diehnt der Einarbeitung nachfolgender Studienarbeiten. Auf Grund der Änderungen im Code kann dieses Paket nicht Kompiliert werden.}
+Die Beschreibung der Klassen dieses Paketes dient der Einarbeitung nachfolgender Studienarbeiten. Auf Grund der Änderungen im Code kann dieses \Pack\ nicht Kompiliert werden.}
 
 
 
