--- a/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
+++ b/Ausarbeitung/211008_MM_T3100_Implementierung - Domain.tex
@@ -1,4 +1,4 @@
-\newSec[ImplDomain]{Implementierung des Domain Layers}{2}
+\newSec[ImplDomain]{Domain Layer}{2}
 
 Der \textit{Domain Layer} stellt als Teil der \clean\ die Ebene dar, in der allgemein gültige Typen oder Definitionen abgelegt werden können. Nachfolgend werden die Klassen beschrieben, die in diesem Projekt zu dem \textit{Domain Layer} gehören. Sofern nicht anders betitelt, handelt es sich bei den Klassen um Klassen vom Typ \VO.
 
