added Chapter Signalverarbeitung and extended Chapter Regelsysteme

--- a/Ausarbeitung/211008_MM_T3100_Architektur.tex
+++ b/Ausarbeitung/211008_MM_T3100_Architektur.tex
@@ -22,6 +22,7 @@ Die Farbgebung in \refImg{fig:Arch} orientiert sich an den Inhalten der Vorlesun
 \refImgShort{fig:Arch} zeigt das Konzept der Architektur. Die Bedeutungen der Pfeile orientieren sich an UML-Klassendiagrammen. Die Farbgebung unterscheidet die verschiedenen Schichten der \clean: \textit{Domain-Layer} (blau), \textit{Application-Layer} (hellblau), \textit{Adapter-Layer} (grün), \textit{PlugIn-Layer} (hellgrün).
 \end{figure}
 
+\missing[Hier muss erwähntwerden, dass genau diese Graphik schon in der SWE Ausarbeitung genutzt wurde.]
 
 
 
