--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -69,11 +69,16 @@
 \addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
 
 \clearpage
-\input{211008_MM_T3100_Regelsystem.tex}						% Section
+\input{211008_MM_T3100_Regelsystem.tex}					% Section
+\input{211008_MM_T3100_Regelsystem Regelkreis.tex}				% SubSection
+\input{211008_MM_T3100_Regelsystem Arten.tex}					% SubSection
+\input{211008_MM_T3100_Regelsystem Stabilität.tex}					% SubSection
 
-
-
-
+\clearpage
+\input{211008_MM_T3100_Signalverarbeitung.tex}				% Section
+\input{211008_MM_T3100_Signalverarbeitung Zeitdiskretität.tex}			% SubSection
+\input{211008_MM_T3100_Signalverarbeitung Messabweichungen.tex}		% SubSection
+\input{211008_MM_T3100_Signalverarbeitung Manipulation.tex}			% SubSection
 
 
 \clearpage
