edited Chapter Regelsystem

--- a/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
+++ b/Ausarbeitung/211008_MM_T3100_Ausarbeitung.tex
@@ -1,5 +1,6 @@
 % Default Inputs
 \input{DefaultContent/200803_Default_Layout.tex}
+\input{DefaultContent/140411_Default_UsepackagesMath.tex}
 \input{DefaultContent/200803_Default_Functions - Shortcuts.tex}
 
 % Specific Inputs
@@ -8,6 +9,10 @@
 
 % Default Inputs with 'Info - Autor' Data
 \input{DefaultContent/200803_Default_PDF Properties.tex}
+
+
+
+
 
 
 
@@ -27,13 +32,16 @@
 % Indecies
 \input{DefaultContent/200803_Default_Verzeichnisse - Inhalt.tex}
 
+
+
+
 \clearpage
 \PagestyleStdFormal
 
 \input{DefaultContent/200803_Default_Verzeichnisse - Abbildungen.tex}
 \input{211008_MM_T3100_Verzeichnisse - Abkürzungen.tex}
 \input{DefaultContent/200803_Default_Verzeichnisse - Tabellen.tex}
-%\input{211008_MM_T3100_Verzeichnisse - Formeln und Symbole.tex}
+\input{DefaultContent/200803_Default_Verzeichnisse - Formeln.tex}
 \input{DefaultContent/200803_Default_Verzeichnisse - Codes.tex}
 
 
