--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -27,15 +27,24 @@
 \Published{19.07.2013}
 
 
+
+% Bücher
+\NewBibItem{RT1}{Heinrich B. (Hrsg.), et al., Kaspers/KOfner Messen - Steuern - Regeln}
+\Version{8., überarbeitete und ergänzte Auflage}
+\Published{2009}
+\ISBN{978-3-8348-0006-0}
+
+\NewBibItem{SV1}{Wendemuth A., Grundlagen der digitalen Signalverarbeitung}
+\Published{2005}
+\ISBN{3-540-21885-8}
+
+
+
+
+
 % Normen
 \NewBibItem{IEC60050-351}{Internationales Elektrotechnisches Wörterbuch – Teil 351: Leittechnik (IEC 60050-351:2006)}
 \Published{06/2009}
-
-
-
-% Bücher
-
-
 
 
 % Einleitung
@@ -53,6 +62,21 @@
 \NewBibItem{Ballon}{ellwangen2010, Ballon steuern?}
 \Online{https://www.ballonfahrten.com/ballon-steuern/}
 \Published{20.02.2010}, \Requested{07.11.2021}
+
+
+
+% Regelungstechnik
+\NewBibItem{ContrD}{D-Glied}
+\Online{http://testcon.info/FB\_DE\_D-Glied.html}
+\Published{\NA}, \Requested{13.04.2022}
+
+
+
+
+
+
+
+
 
 
 
