--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -67,6 +67,20 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 \usepackage{xifthen}
 
 
+% Verzeichnisse
+\DeclareCaptionType{equ}[][Formelverzeichnis]
+\captionsetup[equ]{labelformat=empty}
+
+
+
+
+
+
+
+
+
+
+
 
 
 % Layout Überschriften im TOC
