wip at Signalverarbeitung.xlsm

--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -9,13 +9,13 @@ Hierbei handelt es sich um die Drohne \Ar. Nachfolgend soll die Drohne und die e
 
 
 \newSec[parrotGeom]{Anordnung der Rotoren}{4}
-
+\missing
 
 X
 
 
 \newSec[parrotSize]{Abmessungen}{4}
-
+\missing
 
 
 
