--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -70,7 +70,9 @@
 \Online{http://testcon.info/FB\_DE\_D-Glied.html}
 \Published{\NA}, \Requested{13.04.2022}
 
-
+\NewBibItem{ContrStable}{Stabilität von Regelkreisen (Frequenzkennlinienverfahren)}
+\Online{https://homepages.thm.de/~hg13555/Datenbank/aat/index.php/grundlagen-regelungstechnik/45-stabilitaet-von-regelkreisen-frequenzkennlinienverfahren.html}
+\Published{\NA}, \Requested{15.04.2022}
 
 
 
