--- a/Ausarbeitung/211008_MM_T3100_Methodik.tex
+++ b/Ausarbeitung/211008_MM_T3100_Methodik.tex
@@ -6,6 +6,7 @@
 
 Analyse des Systems „Drohne“ (Geometrie, Regel- und Messgrößen)
 Analyse möglicher Messgrößen (Beschleunigungssensorik, evtl. Bilddaten)
+Analyse realer Messdaten aus Flugversuchen
 Modellierung des Regelsystems
 Entwurf eines geeigneten Reglers
 Implementierung des entworfenen Reglers
