--- a/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
+++ b/Ausarbeitung/211008_MM_T3100_Quadrokopter.tex
@@ -148,12 +148,12 @@ Eine Pose ist die Positions- und Lagebeschreibung in einem Raum. \missing[quelle
 
 
 \newSec{lokale Pose}{3}
-
+\missing
 
 
 
 \newSec{globale Pose}{3}
-
+\missing
 
 
 
