--- a/Ausarbeitung/211008_MM_T3100_Regelsystem Stabilität.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem Stabilität.tex
@@ -1,5 +1,7 @@
 \newSec{Stabilität}{2}
 
+Die Stabilität eines Regelkreises beschreibt, ob der Regelkreis zum Schwingen neigt. Hierfür wird die Übertragungsfunktion des offenen Regelkreises analysiert. Das Schwingen eines zu regelnden Systems ist zu vermeiden. \compB{RT1}{ContrStable}
 
-\missing[nur anmerken, dass es Instabile Systeme gibt => Bode-Diagramm nennen]
+An dieser Stelle soll auf eine Beschreibung der Analyse der Stabilität von Regelkreisen verzichtet werden, um den Rahmen dieser \Arbeit\ einhalten zu können.
+Als Schlagworte für interessierte Lesende sei hier das \textit{Bode-Diagramm} und die \textit{Ortskurve} genannt \compB{RT1}{ContrStable}.
 
