--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
@@ -1,4 +1,4 @@
-\newSec[ControlPosPose]{Positionsregelung von \Quad[n] einer Pose}{2}
+\newSec[ControlPosPose]{Positionsregelung von \Quad[n] mittels Pose}{2}
 
 
 
