edited Chapter Positionsregelung

--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -66,8 +66,22 @@ Für die Ansteuerung der Drohne \Ar\ existiert eine Treiber, welche die initiali
 
 
 
-
 \missing[Bild von rqt-graph]
+
+
+
+
+
+
+
+
+
+\newSec{\rTopic{cmd_vel}}{5}
+Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln und so ODER??
+\missing\
+
+
+
 
 
 
@@ -81,7 +95,7 @@ Für die Ansteuerung der Drohne \Ar\ existiert eine Treiber, welche die initiali
 
 
 
-
+\newSec[parrotParams]{Parameter}{4}
 
 
 
