--- a/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211008_MM_T3100_Literaturverzeichnis.tex
@@ -38,6 +38,14 @@
 \Published{2005}
 \ISBN{3-540-21885-8}
 
+\NewBibItem{DataAnalysis1}{Tukey J., Exploratory Data Analysis}
+\Published{1977}
+\ISBN{0-201-07616-0}
+
+
+
+
+
 
 
 
