--- a/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
+++ b/Ausarbeitung/211008_MM_T3100_Positionsregelung Pose.tex
@@ -1,4 +1,12 @@
 \newSec[ControlPosPose]{Positionsregelung von \Quad[n] mittels Pose}{2}
 
 
+\missing[Kann das hier noch ausführlicher?]
+
+
+
+Die Freiheitsgrade einer Drohne können grundsätzlich separat geregelt werden.
+Jedoch ist die Kraft in z-Richtung abhängig von der Ausrichtung (Roll und Pitch) des \Quad[s]. Dies ist aus \refImg{fig:ForcesRolled} ersichtlich. Der \Quad\ wird als Folge einer Veränderung der Roll- und Pitch-Winkel an Höhe verlieren. Der Höhenregler wird diese Veränderung nachführen.
+Um ein Nachregeln des \Quad[s] bei einer Orientierungsänderung in der Horizontalen abschwächen zu können, kann der veränderte Schubbedarf aus den gemessenen oder berechneten Roll- und Pitch-Winkeln abgeleitet und zu dem Schubsignal aufaddiert werden.
+
 
