edited Chapter Analyse realer Flugdaten

--- a/Ausarbeitung/211008_MM_T3100_Hardware.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware.tex
@@ -1,9 +1,9 @@
 \newSec[HW]{Eingesetzte Hardware}{1}
 
-In dieser \Arbeit\ wurden zwei unterschiedliche Drohnen eingesetzt.
+In dieser \Arbeit\ wurden zwei unterschiedliche \Quad\ eingesetzt.
 
-Die zu Beginn der \Arbeit\ eingesetzte Drohne des Herstellers \COEX\ wird in diesem Kapitel begrenzt beschrieben. Vorrangig sollen hier Erkenntnisse über das Verhalten dieser Drohne und mögliche Lösungswege der Problemstellung erläutert werden.
+Die zu Beginn der \Arbeit\ eingesetzte \Quad\ des Herstellers \COEX\ wird in diesem Kapitel ebenfalls beschrieben. Vorrangig sollen hier Erkenntnisse über das Verhalten dieser Drohne und mögliche Lösungswege der Problemstellung erläutert werden.
 
-Nach Austauach der Hardware wurde die \Ar\ des Herstellers \Parrot\ genutzt. Diese Drohne wurde bereits erfolgreich durch die \DHBW\ im Zuge der Labor-Vorlesung \textit{Robotik} eingesetzt.
+Nach Austauach der Hardware wurde die \Ar\ des Herstellers \Parrot\ genutzt. Dieser \Quad\ wurde bereits erfolgreich durch die \DHBW\ im Zuge der Labor-Vorlesung \textit{Robotik} eingesetzt.
 
 
