--- a/Ausarbeitung/211008_MM_T3100_Regelsystem Arten.tex
+++ b/Ausarbeitung/211008_MM_T3100_Regelsystem Arten.tex
@@ -1,7 +1,7 @@
 \newSec[Regelerarten]{Arten von Reglergliedern}{2}
 
 In diesem Kapitel sollen grundlegende Bausteine der Regelungtechnik beschrieben werden. Diesbezüglich erhebt dieses Kapitel keinen Anspruch auf Vollständigkeit. Auf eine detallierte Beschreibung, welche \ua\ das Zeitverhalten betrachten, soll hier außen vor gelassen werden.
-Als weitere Einschränkung soll sich die Betrachtung der Bausteine ausschließlich auf zeitdiskrete Systeme (vgl. \refCap{zeitdiskrete Systeme}) beziehen.
+Als weitere Einschränkung soll sich die Betrachtung der Bausteine ausschließlich auf zeitdiskrete Systeme beziehen.
 
 
 \newSec[ControlP]{P-Glied}{3}
@@ -74,7 +74,7 @@ Das Ausgangssignal des \textit{D-Glieds} kann durch folgende Formel berechnet we
 \begin{equation}
 y_k = k_D * \frac{x_k - x_{k-1}}{\Delta t}
 \end{equation}
-\caption{Übertragungsfunktion des I-Glieds}
+\caption{Übertragungsfunktion des D-Glieds}
 \end{equ}
 
 
