--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -30,7 +30,7 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 \usepackage{pifont}					%Dingbats-Symbole (siehe Tabelle)
 \usepackage{enumerate}				%Aufzählungen: a A i I 1
 \usepackage{graphicx}				%Bilder
-
+\usepackage[section]{placeins}			%Alle Grafiken vor neuem Kapitel
 
 
 % Verzeichnisse
