--- a/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
+++ b/Ausarbeitung/211008_MM_T3100_Hardware - Parrot.tex
@@ -71,12 +71,11 @@ Für die Ansteuerung der Drohne \Ar\ existiert eine Treiber, welche die initiali
 
 
 
+\newSec[parrotTopicsNav]{\rTopic{NavData}}{5}
+Das \rTopic{NavData} fasst alle für die verfügbaren Daten des \Quad[s] in einem Nachricht zusammen. hieraus können geeignete Informationen entnommen werden.
 
 
-
-
-
-\newSec{\rTopic{cmd_vel}}{5}
+\newSec[parrotTopicsCMD]{\rTopic{cmd\_vel}}{5}
 Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln und so ODER??
 \missing\
 
@@ -86,7 +85,8 @@ Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln un
 
 
 
-
+\newSec[parrotTopicsStream]{Video-Streams}{5}
+Die Übertragung der Video-Daten der beiden Kameras soll an dieser Stelle lediglich erwähnt werden.
 
 
 \newSec[parrotService]{Services}{4}
@@ -95,7 +95,36 @@ Nur geschwindigkeits-Daten. Keine tatsächliche Übergabe von Neigungswinkeln un
 
 
 
+
+
+
+
 \newSec[parrotParams]{Parameter}{4}
+
+
+
+
+
+
+
+
+\newSec[parrotIB]{Inbetriebnahme auf separatem Rechner}{3}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
